AIacademia/mainlogfile.log
INFO || 26-Jan-24 02:40:15 || Pro-Act-Ed 2024 Recommender Engine Initialized
INFO || 26-Jan-24 02:41:40 || Pro-Act-Ed 2024 Recommender Engine Initialized
INFO || 26-Jan-24 02:53:44 || Pro-Act-Ed 2024 Recommender Engine Initialized
INFO || 26-Jan-24 02:55:24 || Pro-Act-Ed 2024 Recommender Engine Initialized
INFO || 26-Jan-24 02:57:04 || Pro-Act-Ed 2024 Recommender Engine Initialized
INFO || 26-Jan-24 02:57:46 || Pro-Act-Ed 2024 Recommender Engine Initialized
INFO || 26-Jan-24 04:31:07 || Processing request...
INFO || 26-Jan-24 04:32:46 || C:\Users\Simon\proacted\AIacademia\academia_app\views.py changed, reloading.
INFO || 26-Jan-24 04:32:48 || Processing request...
INFO || 26-Jan-24 04:39:43 || mathematics english chemistry physics geography computer studies
INFO || 26-Jan-24 04:39:43 || science teaching public speaking reading gaming writing travelling technology astronomy reading and learnng robotics metal detecting
INFO || 26-Jan-24 04:39:43 || Beginning to run the recommender script
INFO || 26-Jan-24 04:39:43 || Recommender model loaded and running
INFO || 26-Jan-24 04:39:43 || Processing request...
CRITICAL || 26-Jan-24 04:40:02 || Something came up, please rerun the system...
INFO || 26-Jan-24 04:40:02 || Recommender system has run
ERROR || 26-Jan-24 04:40:02 || Internal Server Error: /recommend_courses
Traceback (most recent call last):
  File "C:\Users\Simon\AppData\Roaming\Python\Python311\site-packages\django\core\handlers\exception.py", line 55, in inner
    response = get_response(request)
               ^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Simon\AppData\Roaming\Python\Python311\site-packages\django\core\handlers\base.py", line 204, in _get_response
    self.check_response(response, callback)
  File "C:\Users\Simon\AppData\Roaming\Python\Python311\site-packages\django\core\handlers\base.py", line 332, in check_response
    raise ValueError(
ValueError: The view academia_app.views.recommend_courses didn't return an HttpResponse object. It returned None instead.
ERROR || 26-Jan-24 04:53:06 || Internal Server Error: /
Traceback (most recent call last):
  File "C:\Users\Simon\AppData\Roaming\Python\Python311\site-packages\django\template\base.py", line 505, in parse
    compile_func = self.tags[command]
                   ~~~~~~~~~^^^^^^^^^
KeyError: 'static'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "C:\Users\Simon\AppData\Roaming\Python\Python311\site-packages\django\core\handlers\exception.py", line 55, in inner
    response = get_response(request)
               ^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Simon\AppData\Roaming\Python\Python311\site-packages\django\core\handlers\base.py", line 197, in _get_response
    response = wrapped_callback(request, *callback_args, **callback_kwargs)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Simon\proacted\AIacademia\academia_app\views.py", line 295, in course_recommendation
    return render(request, 'academia_app/course_recommendation_page.html')
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Simon\AppData\Roaming\Python\Python311\site-packages\django\shortcuts.py", line 24, in render
    content = loader.render_to_string(template_name, context, request, using=using)
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Simon\AppData\Roaming\Python\Python311\site-packages\django\template\loader.py", line 61, in render_to_string
    template = get_template(template_name, using=using)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Simon\AppData\Roaming\Python\Python311\site-packages\django\template\loader.py", line 15, in get_template
    return engine.get_template(template_name)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Simon\AppData\Roaming\Python\Python311\site-packages\django\template\backends\django.py", line 33, in get_template
    return Template(self.engine.get_template(template_name), self)
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Simon\AppData\Roaming\Python\Python311\site-packages\django\template\engine.py", line 175, in get_template
    template, origin = self.find_template(template_name)
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Simon\AppData\Roaming\Python\Python311\site-packages\django\template\engine.py", line 157, in find_template
    template = loader.get_template(name, skip=skip)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Simon\AppData\Roaming\Python\Python311\site-packages\django\template\loaders\cached.py", line 57, in get_template
    template = super().get_template(template_name, skip)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Simon\AppData\Roaming\Python\Python311\site-packages\django\template\loaders\base.py", line 28, in get_template
    return Template(
           ^^^^^^^^^
  File "C:\Users\Simon\AppData\Roaming\Python\Python311\site-packages\django\template\base.py", line 154, in __init__
    self.nodelist = self.compile_nodelist()
                    ^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Simon\AppData\Roaming\Python\Python311\site-packages\django\template\base.py", line 200, in compile_nodelist
    return parser.parse()
           ^^^^^^^^^^^^^^
  File "C:\Users\Simon\AppData\Roaming\Python\Python311\site-packages\django\template\base.py", line 507, in parse
    self.invalid_block_tag(token, command, parse_until)
  File "C:\Users\Simon\AppData\Roaming\Python\Python311\site-packages\django\template\base.py", line 568, in invalid_block_tag
    raise self.error(
django.template.exceptions.TemplateSyntaxError: Invalid block tag on line 6: 'static'. Did you forget to register or load this tag?
INFO || 26-Jan-24 05:03:18 || C:\Users\Simon\proacted\AIacademia\academia_app\views.py changed, reloading.
INFO || 26-Jan-24 05:04:08 || C:\Users\Simon\proacted\AIacademia\academia_app\views.py changed, reloading.
INFO || 26-Jan-24 05:04:20 || Beginning to run the recommender script
INFO || 26-Jan-24 05:04:20 || Recommender model loaded and running
CRITICAL || 26-Jan-24 05:04:20 || Something came up, please rerun the system...
INFO || 26-Jan-24 05:04:20 || Recommender system has run
ERROR || 26-Jan-24 05:04:21 || Internal Server Error: /recommend_courses
Traceback (most recent call last):
  File "C:\Users\Simon\AppData\Roaming\Python\Python311\site-packages\django\core\handlers\exception.py", line 55, in inner
    response = get_response(request)
               ^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Simon\AppData\Roaming\Python\Python311\site-packages\django\core\handlers\base.py", line 204, in _get_response
    self.check_response(response, callback)
  File "C:\Users\Simon\AppData\Roaming\Python\Python311\site-packages\django\core\handlers\base.py", line 332, in check_response
    raise ValueError(
ValueError: The view academia_app.views.recommend_courses didn't return an HttpResponse object. It returned None instead.
INFO || 26-Jan-24 05:04:58 || C:\Users\Simon\proacted\AIacademia\academia_app\views.py changed, reloading.
INFO || 26-Jan-24 05:05:28 || C:\Users\Simon\proacted\AIacademia\academia_app\views.py changed, reloading.
INFO || 26-Jan-24 05:06:35 || C:\Users\Simon\proacted\AIacademia\academia_app\views.py changed, reloading.
INFO || 26-Jan-24 05:06:48 || Beginning to run the recommender script
INFO || 26-Jan-24 05:06:48 || Recommender model loaded and running
INFO || 26-Jan-24 05:06:48 || Processing request...
INFO || 26-Jan-24 05:07:11 || Recommender system has run
INFO || 26-Jan-24 05:08:08 || C:\Users\Simon\proacted\AIacademia\academia_app\views.py changed, reloading.
INFO || 26-Jan-24 05:13:53 || Beginning to run the recommender script
INFO || 26-Jan-24 05:13:53 || Recommender model loaded and running
INFO || 26-Jan-24 05:13:53 || Processing request...
INFO || 26-Jan-24 05:14:16 || Recommender system has run
INFO || 26-Jan-24 05:16:31 || Beginning to run the recommender script
INFO || 26-Jan-24 05:16:31 || Recommender model loaded and running
INFO || 26-Jan-24 05:16:31 || Processing request...
INFO || 26-Jan-24 05:17:12 || Recommender system has run
INFO || 26-Jan-24 05:18:12 || C:\Users\Simon\proacted\AIacademia\academia_app\views.py changed, reloading.
INFO || 26-Jan-24 05:18:19 || Beginning to run the recommender script
INFO || 26-Jan-24 05:18:19 || Recommender model loaded and running
INFO || 26-Jan-24 05:18:19 || Processing request...
INFO || 26-Jan-24 05:18:58 || Recommender system has run
